fix: ticket illustration pixel gap

--- a/src/static/styles/ui.scss
+++ b/src/static/styles/ui.scss
@@ -292,7 +292,7 @@
 
     background-position-y: top;
     background-position-x: left, right;
-    background-size: 50% 100%;
+    background-size: calc(50% + 1px) 100%;
     background-repeat: no-repeat;
 
     border-radius: var(--border-radius-regular);
@@ -396,7 +396,7 @@
     cursor: pointer;
 
     background-position: bottom left, bottom right;
-    background-size: 50% 100%;
+    background-size: calc(50% + 1px) 100%;
     background-repeat: no-repeat;
 
     background-image: radial-gradient(
@@ -425,7 +425,7 @@
         transition: opacity 150ms ease;
 
         background-position: bottom left, bottom right;
-        background-size: 50% 100%;
+        background-size: calc(50% + 1px) 100%;
         background-repeat: no-repeat;
 
         background-image: radial-gradient(
